# PuppyPatch

./: .gitignore  .goreleaser.yml  AGENTS.md  PUPPYPATCH.md  README.md  SECURITY.md  flake.nix  go.mod  go.sum  main.go  schema.json
agent/: README.md
horus/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  HORUS.md  LICENSE  README.md  docker-compose.yml  horus.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json  vitest.config.ts
horus/apps/cli/horus_cli/: main.py
horus/apps/cli/src/: index.ts
horus/apps/dashboard/: layout.tsx  package.json  page.tsx  style.css  tsconfig.json
horus/apps/gateway/horus_gateway/: adapters.py  main.py
horus/docs/: AGENTSTACK_PLUS.md  ARCHITECTURE.md  HERMES_PLUS.md  MCP.md  MEMORY.md  ORCHESTRATION.md  PHASE1_BOUNDARY.md  ROADMAP.md  SECURITY_MODEL.md  TYPESCRIPT_ARCHITECTURE.md
horus/horus/agents/: __init__.py  runtime.py
horus/horus/backends/: __init__.py  runtime.py
horus/horus/core/: config.py  events.py
horus/horus/mcp/: __init__.py  client.py
horus/horus/memory/: __init__.py
horus/horus/models/: __init__.py  client.py  router.py
horus/horus/orchestration/: orchestrator.py
horus/horus/projectgen/: __init__.py  generator.py
horus/horus/skills/: registry.py
horus/horus/tools/: __init__.py  registry.py
horus/horus/tui/: __init__.py  app.py
horus/tests/: checkpoint.test.ts  config.test.ts  eventBus.test.ts  filesystem.test.ts  modelMock.test.ts  phase1Boundary.test.ts  risk.test.ts  slash.test.ts  slashPhase1.test.ts  test_agent_runtime.py  test_backends.py  test_cli.py  test_cli_run.py  test_config.py  test_gateway.py  test_mcp.py  test_mcp_client.py  test_memory.py  test_models.py  test_orchestration.py  test_provider_client.py  test_scheduler.py  test_skills.py  test_tools_security.py  test_tui.py  tools.test.ts
pentestagent/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.kali  LICENSE.txt  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
pentestagent/.github/: dependabot.yml
pentestagent/.github/workflows/: docker.yml  tests.yml
pentestagent/mcp_examples/: README.md
pentestagent/mcp_examples/sse/: README.md
pentestagent/mcp_examples/sse/n8n/: README.md  docker-compose.yml  mcp_servers.json
pentestagent/mcp_examples/stdio/: README.md
pentestagent/mcp_examples/stdio/kali/: Dockerfile  README.md  docker-compose.yml  mcp_servers.json
pentestagent/pentestagent/: __init__.py  __main__.py
pentestagent/pentestagent/agents/: __init__.py  base_agent.py  state.py
pentestagent/pentestagent/agents/crew/: __init__.py  models.py  orchestrator.py  tools.py  worker_pool.py
pentestagent/pentestagent/agents/pa_agent/: __init__.py  pa_agent.py
pentestagent/pentestagent/agents/prompts/: __init__.py  pa_agent.jinja  pa_assist.jinja  pa_crew.jinja  pa_interact.jinja  pa_mcp.jinja
pentestagent/pentestagent/config/: __init__.py  constants.py  settings.py
pentestagent/pentestagent/interface/: __init__.py  cli.py  conversation_store.py  initializer.py  main.py  notifier.py  tui.py  utils.py
pentestagent/pentestagent/interface/assets/: tui_styles.tcss
pentestagent/pentestagent/interface/widgets/: __init__.py  collapsible_terminal.py  embedded_terminal.py
pentestagent/pentestagent/knowledge/: __init__.py  embeddings.py  graph.py  indexer.py  rag.py
pentestagent/pentestagent/knowledge/sources/: cves.json  methodologies.md  wordlists.txt
pentestagent/pentestagent/llm/: __init__.py  config.py  llm.py  memory.py  utils.py
pentestagent/pentestagent/mcp/: __init__.py  example_adapter.py  manager.py  mcp_rag_optimizer.py  stdio_adapter.py  tools.py  transport.py
pentestagent/pentestagent/mcp/server/: __init__.py  mcp_core.py  mcp_tools.py  mcp_transport_stdio.py  mcp_transport_streamable_http.py
pentestagent/pentestagent/playbooks/: __init__.py  base_playbook.py  thp3_network.py  thp3_recon.py  thp3_web.py
pentestagent/pentestagent/runtime/: __init__.py  docker_runtime.py  runtime.py  tool_server.py
pentestagent/pentestagent/tools/: __init__.py  executor.py  loader.py  mcp_agent.py  registry.py  token_tracker.py
pentestagent/pentestagent/tools/browser/: __init__.py  browser.py
pentestagent/pentestagent/workspaces/: __init__.py  manager.py  utils.py  validation.py
pentestagent/scripts/: run.sh  setup.ps1  setup.sh
pentestagent/tests/: __init__.py  conftest.py
pentestagent/tests/integration/: test_agent_loop.py
pentestagent/tests/security/: test_api_key_leakage.py  test_command_injection.py  test_pickle_deserialization.py  test_prompt_injection.py  test_scope_bypass.py
(+422 files in other folders)
