[project]
name = "pentestagent"
version = "0.2.0"
description = "AI penetration testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Masic"}
]
keywords = [
    "penetration-testing",
    "security",
    "ai",
    "llm",
    "mcp",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.82.0",
    "openai>=2.0.0",
    "anthropic>=0.84.0",
    "tiktoken>=0.12.0",
    "aiohttp>=3.13.0",
    "aiofiles>=25.0.0",
    "playwright>=1.50.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "networkx>=3.3",
    "docker>=7.1.0",
    "rich>=14.0.0",
    "textual>=8.0.0",
    "typer>=0.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "pyte>=0.8.0",
    "pyperclip>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "black>=26.0.0",
    "isort>=8.0.0",
    "mypy>=1.19.0",
    "ruff>=0.15.0",
]
rag = [
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.8.0",
]
all = [
    "pentestagent[dev,rag]",
]
hexstrike = [
    "flask>=2.3.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "psutil>=5.9.0,<8.0.0",
    "fastmcp>=0.2.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "selenium>=4.15.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "mitmproxy>=9.0.0,<12.0.0",
    "pwntools>=4.10.0,<5.0.0",
    "angr>=9.2.0,<10.0.0",
    "bcrypt==5.0.0",
]

[project.urls]
Homepage = "https://github.com/GH05TCREW/pentestagent"

[project.scripts]
pentestagent = "pentestagent.interface.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pentestagent"]

[tool.hatch.build.targets.sdist]
include = [
    "pentestagent/**",
    "*.md",
    "*.txt"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    # TUI and CLI cannot be unit-tested without an interactive terminal
    "pentestagent/interface/*",
    "pentestagent/interface/widgets/*",
    # MCP server transports require a running server process
    "pentestagent/mcp/server/*",
    "pentestagent/mcp/stdio_adapter.py",
    "pentestagent/mcp/example_adapter.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pentestagent"]

[tool.ruff]
line-length = 88
target-version = "py310"

exclude = ["third_party/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
